# cosmos-wind-cnn

./: .gitignore  README.md  SWEEP_README.md  backfill_manifest.txt  backfill_v2w_manifest.txt  collect_extreme.py  concat_fullrec.slurm  cpu_bench_memmap.slurm  cpu_memmap_convert.slurm  cpu_v2data_preprocess.slurm  cut_2025_zip.slurm  cut_year_subset.slurm  eval_seedrep.slurm  eval_v2_arms.slurm  eval_v2_arms_wind.slurm  eval_variant.slurm  eval_winner.slurm  eval_x10_baseline.slurm  gpu_backfill_1990.slurm  gpu_fullrec_seg.slurm  gpu_opt_search.slurm  gpu_rtma_infer_winner2.slurm  gpu_rtma_mm_dl2.slurm  gpu_seedrep.slurm  gpu_sweep_array.slurm  gpu_sweep_rerun.slurm  gpu_tallgrass_rtma_resume.slurm  gpu_v2_arms.slurm  gpu_v2_arms_wind.slurm  gpu_x10.slurm  opt_search_manifest.txt  pyproject.toml  requirements.txt  seedrep_manifest.txt  sweep_manifest.txt  v2_arms.txt  v2_arms_wind.txt  x10_manifest.txt
docs/: 2026-07-23-validation-relocation-design.md  2026-07-23-validation-relocation-plan.md  adding_case_study.md  data_preparation.md  model_architecture.md
notebooks/: 01_data_exploration.ipynb  02_validate_raw_meteo.ipynb  03_validate_cnn_output.ipynb  04_compare_case_studies.ipynb
scripts/: bench_memmap_loader.py  convert_to_memmap.py  cpu_rtma_eval.slurm  cpu_tallgrass.slurm  evaluate.py  gpu_backfill_v2w.slurm  gpu_rtma_infer_winner.slurm  gpu_tallgrass.slurm  gpu_tallgrass_eval_only.slurm  gpu_tallgrass_inference.slurm  gpu_tallgrass_rtma.slurm  gpu_tallgrass_rtma_fresh.slurm  gpu_tallgrass_rtma_infer.slurm  inference.py  inference_full_record.py  preprocess.py  (+10 more)
(+61 files in other folders)
