[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmos-wind-cnn"
version = "0.1.0"
description = "3D U-Net for statistical downscaling of meteorological variables from coarse reanalysis to high-resolution fields"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "xarray>=2023.0.0",
    "netCDF4>=1.6.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "cartopy>=0.21.0",
    "tensorboard>=2.13.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "jupyter>=1.0.0", "ipython>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
